fix: Fix configs still failing to load on Forge and NeoForge